<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.highresults.robotconnection.Joystick
        android:id="@+id/Joystick"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame"
            android:gravity="center"
            android:text="@string/connect" />

        <Button
            android:id="@+id/doSomething"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame"
            android:gravity="center"
            android:text="@string/something_useful" />

        <TextView
            android:id="@+id/forwardMovementNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:gravity="center"
            android:text="@string/forward" />

        <TextView
            android:id="@+id/sideMovementNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:gravity="center"
            android:text="@string/side" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/frame"
            android:gravity="center"
            android:maxWidth="200dp"
            android:text="@string/error_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/firstServo"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:max="100"
            android:progress="3" />

        <SeekBar
            android:id="@+id/secondServo"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:max="100"
            android:progress="3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>